--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   bot:
     build: .
@@ -7,3 +5,21 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      - DOCKER_MODE=true ##чтобы нормально делать миграции и не менять локалхост на дб
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    container_name: ai_voice_db
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+
+volumes:
+  pg_data:
