--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ aiogram==3.18.0
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.13
 aiosignal==1.3.2
+aiosqlite==0.21.0
+alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
@@ -11,20 +13,29 @@ certifi==2025.1.31
 distro==1.9.0
 ffmpeg==1.4
 frozenlist==1.5.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 jiter==0.8.2
 magic-filter==1.0.12
+Mako==1.3.9
+MarkupSafe==3.0.2
 multidict==6.1.0
 openai==1.64.0
+packaging==24.2
+pluggy==1.5.0
 propcache==0.3.0
 pydantic==2.10.6
 pydantic-settings==2.8.0
 pydantic_core==2.27.2
+pytest==8.3.4
+pytest-asyncio==0.25.3
 python-dotenv==1.0.1
 sniffio==1.3.1
+SQLAlchemy==2.0.38
 tqdm==4.67.1
 typing_extensions==4.12.2
 yarl==1.18.3
